// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchForm /> should match snapshot 1`] = `
"<form className=\\"form\\" onSubmit={[Function]} id=\\"searchForm\\">
  <div className=\\"inputWrapper\\" id=\\"searchNameInput\\">
    <input className=\\"input\\" type=\\"text\\" placeholder=\\"Enter Movie or Tv show name...\\" value=\\"\\" onChange={[Function: onChange]} onBlur={[undefined]} />
  </div>
  <button className=\\"btn btn btn--big btn--primary\\" type=\\"submit\\">
    Find
  </button>
  <Connect(suggestions) />
</form>"
`;

exports[`<SearchForm /> should match snapshot if searchInputValue !== null 1`] = `
"<form className=\\"form\\" onSubmit={[Function]} id=\\"searchForm\\">
  <div className=\\"inputWrapper\\" id=\\"searchNameInput\\">
    <input className=\\"input\\" type=\\"text\\" placeholder=\\"Enter Movie or Tv show name...\\" value=\\"value\\" onChange={[Function: onChange]} onBlur={[undefined]} />
    <div className=\\"iconClose\\" onClick={[Function: onClick]}>
      <SvgClose fill=\\"#616161\\" width=\\"15px\\" height=\\"15px\\" />
    </div>
  </div>
  <button className=\\"btn btn btn--big btn--primary\\" type=\\"submit\\">
    Find
  </button>
  <Connect(suggestions) />
</form>"
`;
